# ecorun

./: LICENSE  README.md
ecorun_fi/: .cproject  .project  lpc1347.ld
ecorun_fi/src/: CMakeLists.txt  arm-none-eabi-gcc.cmake  integer.c  integer.h  main.c  usart_receive_data_handler.c
ecorun_fi/src/carsystem/: accessible_data.h  car_info.c  fi_settings.c  fi_settings.h  injection.c  injection.h
ecorun_fi/src/core/: adler32.c  adler32.h  base64.c  base64.h  command.c  command.h  systimer.c  systimer.h
ecorun_fi/src/system/: integer.c  integer.h  systimer.h  type.h
ecorun_fi/src/system/cmsis/: LPC13Uxx.h  startup.c
ecorun_fi/src/system/cortexm/: __reset_hardware.c  _initialize_hardware.c
ecorun_fi/src/system/peripheral/: adc.c  adc.h  adc_handler.c  eeprom.c  eeprom.h  ssp.c  ssp.h  timer.c  timer.h  timer_handler.c  uart.c  uart.h  uart_handler.c  usart.c  usart.h  usart_handler.c
ecorun_fi/src/util/: usart_util.c  usart_util.h
ecorun_fi_ecu/: .cproject  .project  lpc1115.ld
ecorun_fi_ecu/src/: command.c  command.h  gpio.c  gpio.h  gpio_handler.c  integer.c  integer.h  main.c  pin_config.c  pin_config.h  type.h
ecorun_fi_ecu/src/carsystem/: fi_settings.c  fi_settings.h  injection.c  injection.h  spi_transmit_data.h  spi_trasmit_data.c  system_io.c  system_io.h
ecorun_fi_ecu/src/cortexm/: _initialize_hardware.c
ecorun_fi_ecu/src/fixmath/: fix16.c  uint32.c
ecorun_fi_ecu/src/handlers/: adc_handler.c  gpio_handler.c  i2c_handler.c  timer_handler.c  uart_handler.c
ecorun_fi_ecu/src/newlib/: string.c
ecorun_fi_ecu/src/peripheral/: adc.h  adc_handler.c  i2c.c  i2c.h  i2c_handler.c  ssp.c  ssp.h  timer.h  timer_handler.c  uart.c  uart_handler.c
ecorun_fi_ecu/src/system/: syscall.c
ecorun_fi_ecu/src/util/: adler32.c  adler32.h  log2fix.c  log2fix.h  (+1 more)
ecorun_fi_front/: .cproject  .project  lpc1347.ld
ecorun_fi_front/src/: CMakeLists.txt  arm-none-eabi-gcc.cmake  countdown_timer.c  countdown_timer.h  integer.c  integer.h  main.c  tests.c  usart_receive_data_handler.c
ecorun_fi_web_console/: app.js  app.js.map  app.ts  car_comm.js  car_comm.js.map  car_comm.ts  car_serialize.js  car_serialize.js.map  car_serialize.ts  carcomm.js  carcomm.ts  carserialize.js  carserialize.ts  ecorun_fi_web_console.njsproj  ecorun_fi_web_console.sln  gulpfile.js  package.json  tsconfig.json  tsd.json
ecorun_fi_web_console/public/: index.html
ecorun_fi_web_console/typings/: tsd.d.ts
(+154 files in other folders)
